[package]
name = "dbboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Local in-process HTTP backend for dbboard: serves the adapter API over loopback."

[dependencies]
dbboard-core = { workspace = true }
dbboard-config = { workspace = true }
# The connection factory (BackendConfig + backend_config_* + adapter
# construction) lives here since ADR-0046; this crate re-exports it and
# no longer wires the concrete adapter crates directly.
dbboard-connect = { workspace = true }
axum = { workspace = true }
# `net` for the loopback TcpListener, `sync` for the shutdown channel.
tokio = { workspace = true, features = ["net", "sync"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# `tower::ServiceExt::oneshot` drives the router in-process without
# binding a socket; pulled in transitively by axum already.
tower = { version = "0.5", features = ["util"] }
reqwest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
