[package]
name = "dbboard-turso"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Turso / libSQL adapter for dbboard."

[dependencies]
async-trait = { workspace = true }
dbboard-core = { workspace = true }
libsql = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
