[package]
name = "dbboard-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "egui-based presentation layer for dbboard. Depends only on dbboard-core."

[dependencies]
# Connection management UI (ADR-0016) routes every TOML + keychain
# mutation through dbboard-config so the UI layer never reaches for the
# filesystem or the OS keychain directly.
dbboard-config = { workspace = true }
dbboard-core = { workspace = true }
# Translation loader (ADR-0015). Provides t!() / t_args!() macros and
# the global Fluent loader. Initialised once at startup from
# `apps/dbboard`; views call the macros directly.
dbboard-i18n = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
# The UI is an HTTP client of the in-process loopback server (ADR-0009);
# it never links a database adapter directly. reqwest drives the calls,
# tokio gives the worker thread its own single-threaded runtime, and
# serde_json shapes request bodies / parses the contract envelopes.
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# `ConnectionsView` tests need a real on-disk path for
# `ConnectionAdmin::new_with_file` to round-trip the TOML through.
tempfile = { workspace = true }

[lints]
workspace = true
