[package]
name = "dbboard-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "egui-based presentation layer for dbboard. Depends only on dbboard-core."

[dependencies]
# Optional AI provider trait (ADR-0023). The UI stores
# `Option<Arc<dyn AiProvider>>` so the AI panel can hide when no provider
# is wired in; concrete providers live in sibling crates that
# `apps/dbboard` constructs at startup and injects here.
dbboard-ai = { workspace = true }
# Connection management UI (ADR-0016) routes every TOML + keychain
# mutation through dbboard-config so the UI layer never reaches for the
# filesystem or the OS keychain directly.
dbboard-config = { workspace = true }
dbboard-core = { workspace = true }
# Translation loader (ADR-0015). Provides t!() / t_args!() macros and
# the global Fluent loader. Initialised once at startup from
# `apps/dbboard`; views call the macros directly.
dbboard-i18n = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
# Result-grid widget (ADR-0030): sticky header + virtualized rows +
# per-column separators for the query result table.
egui_extras = { workspace = true }
# The UI is an HTTP client of the in-process loopback server (ADR-0009);
# it never links a database adapter directly. reqwest drives the calls,
# tokio gives the worker thread its own single-threaded runtime, and
# serde_json shapes request bodies / parses the contract envelopes.
reqwest = { workspace = true }
tokio = { workspace = true }
# Drop-the-future cancel for in-flight AI requests (ADR-0026 Decision 5).
# The worker holds a single `CancellationToken` per in-flight AI command
# and races the stream future against `.cancelled()` via `tokio::select!`.
tokio-util = { workspace = true }
# `BoxStream` consumption side of the AI streaming surface (ADR-0026
# Decision 1). The worker awaits `AiStream::next()` to forward chunks
# over the std::mpsc reply channel.
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# `ConnectionsView` tests need a real on-disk path for
# `ConnectionAdmin::new_with_file` to round-trip the TOML through.
tempfile = { workspace = true }
# In-test stub implementation of `AiProvider` (ADR-0023). The trait is
# `#[async_trait]` decorated; tests that build a real `Arc<dyn AiProvider>`
# need the macro too. Dev-dep only — production code in dbboard-ui never
# implements the trait, it only stores `Option<Arc<dyn ...>>`.
async-trait = { workspace = true }

[lints]
workspace = true
